# YouTube-Comments-Analytics-and-Summarizer

./: LICENSE  README.md  pyproject.toml  setup.sh  template.py
notebooks/: 01_exploring_data.ipynb  02_model_building_using_tokenizer.ipynb  helper.py
youtube_analytics/configuration/: azure_blob_operations.py
youtube_analytics/exception/: __init__.py
youtube_analytics/logger/: __init__.py
youtube_analytics/utils/: utils.py
