[tool.poetry]
name = "youtube-comments-analytics-and-summarizer"
packages = [{ include = "youtube_analytics"},]
version = "0.1.0"
description = ""
authors = ["Saurav Thakur <sauravthakur1341@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.2.1"
numpy = "^1.26.4"
scikit-learn = "^1.4.1.post1"
ipykernel = "^6.29.4"
matplotlib = "^3.8.3"
seaborn = "^0.13.2"
nltk = "^3.8.1"
textblob = "^0.18.0.post0"
xgboost = "^2.0.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
